--- a/app/src/main/res/layout/activity_decode.xml
+++ b/app/src/main/res/layout/activity_decode.xml
@@ -1,33 +1,41 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".DecodeActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".DecodeActivity"
+    android:gravity="center_horizontal">
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:inputType="number|textNoSuggestions"
+        android:imeOptions="actionDone"
+        android:id="@+id/numberInput"
+        android:hint="@string/numberInputHint"
+        android:maxLength="10"
+        android:lines="1"
+        android:digits="1234567890"
+        android:layout_gravity="top|center_horizontal"
+        android:textSize="@dimen/numberInput_text_size" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text="@string/enter_code"
         android:id="@+id/decodeMessage"
-        android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true" />
+        android:gravity="center_horizontal"
+        android:lines="@integer/com.githhub.deniszpua.itndecode.MESSAGE_LINES_NUMBER"
+        android:textSize="@dimen/numberInput_text_size" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_below="@+id/decodeMessage"
-        android:layout_centerHorizontal="true" />
+        android:text="@string/button_decode"
+        android:onClick="displayDecodeResult" />
 
-</RelativeLayout>
+</LinearLayout>
