--- a/app/src/main/res/layout/activity_decode.xml
+++ b/app/src/main/res/layout/activity_decode.xml
@@ -38,7 +38,7 @@
         android:layout_width="145dp"
         android:layout_height="52dp"
         android:text="@string/button_decode"
-        android:onClick="displayDecodeResult"
+        android:onClick="onButtonPressed"
         android:background="@drawable/button_custom"
         android:layout_weight="0.04"
         android:textColor="#ffffffff" />
